# da_slam

./: .gitignore  .gitmodules  CMakeLists.txt  asso_eff.txt  errorsGraph.txt  errors_graph_maximum_likelihood.txt  graph.txt  imgui.ini  nis_log.txt  runTime.txt  runTime.txt~dogleg  slam_g2o_file  test_g2o_parsing
cmake/: AddOptions.cmake  CMakeLists.txt  FindVisualization.cmake
cmake/options/: BuildSandbox.cmake  BuildTesting.cmake  Heartbeat.cmake  HypothesisQuality.cmake  Logging.cmake  Profiling.cmake
config/: config.yaml
data/g2o/2d_smallscale/: graph_gt_2d_smallscale.g2o  graph_type1_out
data/g2o/3d_garage/: graph_gczptgyr.g2o  graph_hfwpsyri.g2o  graph_iqjolzku.g2o
include/: visualizer.h
include/config/: config.h
include/da_slam/: argparse.hpp  config.hpp  fmt.hpp  types.hpp  utils.hpp
include/da_slam/data_association/: compatibility.hpp  data_association_interface.hpp  hypothesis.hpp  innovation.hpp  known_data_association.hpp  known_data_association.hxx  maximum_likelihood.hpp  maximum_likelihood.hxx
include/da_slam/data_association/assignment_solvers/: assignment_solver_interface.hpp  auction.hpp  hungarian.hpp
include/da_slam/slam/: slam.hpp  slam.hxx  slam_interface.hpp  utils_g2o.hpp
include/da_slam/visualization/: colors.hpp  drawing.hpp  visualization.hpp
include/data_association/: DataAssociation.h  Hypothesis.h
include/data_association/gt/: KnownDataAssociation.h  KnownDataAssociation.hxx
include/data_association/jcbb/: jcbb.h
include/data_association/ml/: MaximumLikelihood.h  MaximumLikelihood.hxx
include/ml/: MaximumLikelihood.h  MaximumLikelihood.hxx
include/slam/: slam.h  slam.hxx  slam_g2o_file.h  types.h  utils_g2o.h
include/visualization/: Visualizer.h  colors.h  drawing.h  visualization.h
sandbox/: CMakeLists.txt  main.cpp
scripts/: auction.py  jac_b_analysis.py  log_utils.py  plot_asso_eff.py  plot_nis.py  visualize.py  visualize_lmk_covar.py
src/: CMakeLists.txt  Visualizer.cpp  argparse.cpp  config.cpp  drawing.cpp  main.cpp  main_viz.cpp  test_g2o_parsing.cpp  visualization.cpp  visualization_opengl.cpp  visualization_vulkan.cpp
src/data_association/: DataAssociation.cpp  Hungarian.cpp  Hypothesis.cpp  compatibility.cpp  hypothesis.cpp  known_data_association.cpp  maximum_likelihood.cpp
src/data_association/assignment_solvers/: auction.cpp  hungarian.cpp
src/data_association/jcbb/: jcbb.cpp
src/slam/: slam.cpp  slam_g2o_file.cpp  slam_g2o_file_visualization.cpp  utils_g2o.cpp
src/visualization/: CMakeLists.txt  drawing.cpp  visualization_opengl.cpp
test/: CMakeLists.txt
test/data_association/: CMakeLists.txt  test_auction_method.cpp  test_hungarian_method.cpp
test/visualization/: CMakeLists.txt  test_association_visualization.cpp
tests/: test_association_visualization.cpp  test_auction_method.cpp  test_hungarian_method.cpp
