cmake_minimum_required(VERSION 3.22)
project(da-slam)

set(CMAKE_CXX_STANDARD 17)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(GTSAM REQUIRED)
find_package(GTSAM_UNSTABLE REQUIRED)
find_package(yaml-cpp REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(range-v3 REQUIRED)
find_package(spdlog REQUIRED)
find_package(magic_enum CONFIG REQUIRED)
find_package(argparse REQUIRED)

include(cmake/AddOptions.cmake)

include(cmake/FindVisualization.cmake)
if(VISUALIZATION_AVAILABLE)
  add_subdirectory(3rdparty)
  message("VISUALIZATION_AVAILABLE = YES")
  message("VISUALIZATION BACKEND = ${VISUALIZATION_BACKEND}")
else()
  message("VISUALIZATION_AVAILABLE = NO")
endif()

add_subdirectory(src)

if(BUILD_TESTING)
  find_package(GTest REQUIRED)
  include(GoogleTest)
  enable_testing()
  add_subdirectory(test)
endif()

if(BUILD_SANDBOX)
  add_subdirectory(sandbox)
endif()